# trading-bot-lw-latam

./: CLAUDE.md  README.md  pyproject.toml
cryptobot/: __init__.py  backtesting_.py  bot.py  config.py  data.py  features.py  models.py  regime.py  scanner.py  sentiment.py  signals.py  visualization.py
