[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptobot"
version = "0.1.0"
description = "Trading bot educativo — Crypto + AI Course"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "ccxt>=4.0.0",
    "scikit-learn>=1.2.0",
    "ta>=0.10.0",
    "plotly>=5.0.0",
    "backtesting>=0.3.3",
    "xgboost>=1.7.0",
    "joblib>=1.2.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]
